# tc_greed

./: CMakeLists.txt.tmpl  Dockerfile  README.md  codeblocks.cbp.tmpl  cpp.h  greed.conf  template.cpp.tmpl
advent_of_code_2022/: CMakeLists.txt  aoc.cpp
advent_of_code_2022/day22/: aoc.cpp  aocpart1.cpp
advent_of_code_2022/day23/: aoc.cpp
advent_of_code_2022/day24/: aocpart1.cpp  aocpart2_didntwork.cpp
atcoder/: CMakeLists.txt  atcoder.cpp
atcoder_rust/: Cargo.toml
atcoder_rust/src/: main.rs
cf/: CMakeLists.txt  codeforces.cpp  default.nix  flake.nix  tester.py
cf_rust/: shell.nix
cf_rust/codeforces/: Cargo.toml
codeforces_rust/: Cargo.toml  shell.nix
codeforces_rust/src/: main.rs
docs/: stob.tex
leetcode/: CMakeLists.txt  SRM827_500_subsetsum.cpp  conn_comps_undirected_graph.cpp  dijkstra.cpp  example_accumulate.cpp  example_conn_comp_dfs.cpp  example_dag_detect_cycle.cpp  example_of_find_first_of.cpp  example_partition_generator.cpp  example_reverse_level_order_tree_bfs.cpp  example_union_find_detect_cycle.cpp  kadanes_algo.cpp  kruskal.cpp  leetcode.cpp  levenstein_dist.cpp  love_this_pq_example.cpp  lrucache.cpp  shortest_path_iterative_dag.cpp  shortest_path_non_recursive_dag.cpp  shortest_path_recursive_dag.cpp  topsort_dfs_dag.cpp
leetcode_rust/: Cargo.toml  README.txt  shell.nix  toolchain.toml
leetcode_rust/src/: bin  combination_sums.rs  combinations.rs  conn_comps_undirected_graph.rs  dijkstra_rust_lang.rs  example.rs  filereader.rs  main.rs  (+8 more)
models/: C1W3_Assignment_tensorflow_convnet.py
yuma/: CMakeLists.txt  test_package.cpp
(+12 files in other folders)
